--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
+    "miragejs": "^0.1.48",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
